* Adding Calculator example. * Fixing the FileSystem bug of expand collapse image showing.

--- a/trunk/trunk/JavaScript Examples/FileSystem/myJSFile.css
+++ b/trunk/trunk/JavaScript Examples/FileSystem/myJSFile.css
@@ -7,23 +7,32 @@ ul.fileBrowser
 ul.fileBrowser li
 {
 	list-style-type: none;
-	padding: 3px 0 3px 20px;
+	padding: 5px 0 5px 15px;
 	margin: 0; 
 	font-size: 11px;
 	font-family: Tahoma;
 }
 
-.folderNode
+.folderNode span
 {
-	list-style-image: url(img/openFolder.png);
+	margin: 0;
+	padding-left: 15px;
+	background-image: url(img/openFolder.png);
+	background-repeat: no-repeat;
+	background-position:  left top;
+}
+
+.closeFolder
+{
 }
 
 .fileNode
 {
+	margin: 0;
+	padding-left: 15px;
 }
 
 .hidden
 {
 	display: none;
-	list-style-image: url(img/closeFolder.png);
 }
